# xser

./: .coveragerc  .flake8  .xproject_python  Makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
example/: hello.py
example/proxy/: flaskproxy.py  httpproxy.py  sockproxy.py
xser/: __init__.py  attribute.py  command.py
xser/http/: __init__.py  proxy.py  request.py
xser/sock/: __init__.py  proxy.py  stream.py
xser/unittest/: test_flask.py
xserver/: attribute.py
xserver/http/: proxy.py  request.py
xserver/sock/: proxy.py
xserver/unittest/http/: test_proxy.py
xserver/unittest/sock/: test_header.py  test_proxy.py
