[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-requirements-txt",
    "hatchling",
]

[project]
authors = [
    { name = "Mingzhe Zou", email = "zoumingzhe@outlook.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
description = "Socket and HTTP Server"
dynamic = [
    "dependencies",
    "version",
]
keywords = []
name = "xser"
requires-python = ">=3.8"

[project.license]
file = "LICENSE"

[project.readme]
content-type = "text/markdown"
file = "readme.md"

[project.scripts]

[project.urls]
Homepage = "https://github.com/bondbox/xser/"

[tool.hatch.build.targets.sdist]
exclude = [
    "xserver/unittest",
]
packages = [
    "xserver",
]

[tool.hatch.build.targets.wheel]
exclude = [
    "xserver/unittest",
]
packages = [
    "xserver",
]

[tool.hatch.metadata.hooks.requirements_txt]
files = [
    "requirements.txt",
]

[tool.hatch.version]
path = "xserver/attribute.py"
